<resources>
    <string name="app_name">Calcul Mentalo !</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="game_fragment_label">Game Fragment</string>
    <string name="save_score_fragment_label">Save Score Fragment</string>
    <string name="highscore_fragment_label">Highscore Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="play_button">Play</string>
    <string name="highscore_button">Highscore</string>
    <string name="exit_button">Exit</string>

    <string name="confirm">Confirm</string>
    <string name="answer">Answer</string>

    <string name="enable_music">Enable music</string>
    <string name="enable_night_mode">Enable night mode</string>
    <string name="select_language">Select langage</string>
    <string-array name="languages">
        <item>Français</item>
        <item>English</item>
    </string-array>

    <string name="save_score">Save</string>
    <string name="retry">Retry</string>
    <string name="score_display">Score : </string>
    <string name="lives">Lives : </string>

    <string name="game_over">Game Over</string>
    <string name="final_score">Your final score : </string>

    <string name="credits">App by Florian Escande</string>
    <string name="features_title">Features :</string>
    <string name="features">Background music, dark theme, language options (may require to do it twice in a row + don\'t try to change language outside of Home screen)</string>

    <string name="save_score_score">Score : </string>
    <string name="username_input">Enter your username</string>
    <string name="username_error">Please enter a username</string>
    <string name="button_save_score">Save score</string>
</resources>