<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph"
        app:startDestination="@id/HomeFragment">

    <fragment
            android:id="@+id/HomeFragment"
            android:name="com.example.calculmentalapp.HomeFragment"
            android:label="@string/home_fragment_label"
            tools:layout="@layout/fragment_home">

        <action
                android:id="@+id/action_HomeFragment_to_GameFragment"
                app:destination="@id/GameFragment" />
        <action
                android:id="@+id/action_HomeFragment_to_HighscoreFragment"
                app:destination="@id/HighscoreFragment" />
    </fragment>
    <fragment
            android:id="@+id/GameFragment"
            android:name="com.example.calculmentalapp.GameFragment"
            android:label="@string/game_fragment_label"
            tools:layout="@layout/fragment_game">
        <action
                android:id="@+id/action_GameFragment_to_SaveScoreFragment"
                app:destination="@id/SaveScoreFragment" />
    </fragment>
    <fragment
            android:id="@+id/HighscoreFragment"
            android:name="com.example.calculmentalapp.HighscoreFragment"
            android:label="@string/highscore_fragment_label"
            tools:layout="@layout/fragment_highscore" />
    <fragment
            android:id="@+id/SaveScoreFragment"
            android:name="com.example.calculmentalapp.SaveScoreFragment"
            android:label="@string/save_score_fragment_label"
            tools:layout="@layout/fragment_save_score">

        <action
                android:id="@+id/action_SaveScoreFragment_to_HighscoreFragment"
                app:destination="@id/HighscoreFragment" />
    </fragment>


</navigation>