<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".SaveScoreFragment">

    <TextView
            android:id="@+id/text_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/save_score_score"
            android:textSize="20sp" />

    <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_score"
            android:layout_marginTop="20dp"
            android:hint="@string/username_input"
            android:inputType="text" />

    <Button
            android:id="@+id/btn_save_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/button_save_score" />
</RelativeLayout>
